# joss-migrate-pmc

./: README.md  pyproject.toml
results/: missing_jats_files.json  step_1_2024-08-02_22-01-49.json
src/joss_migrate_pmc/: checks.py  main.py  paper.py  steps.py
